Tovolo Removed something broken

--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ blockquote{
 -----------------------------------*/
 html {
     overflow-x: hidden;
+    width: 100%;
 }
 body{
     margin:0;
@@ -506,7 +507,7 @@ p.project-info {
     text-indent: -99999px;
     overflow: hidden;
     position: absolute;
-    top: 30px;
+    top: 40px;
     right: 20px;
 }
 #about {
@@ -772,7 +773,7 @@ p.ptitle {
 .selected3 {
     background: #e0e0e0;
     opacity: .8;
-    color: #444444;
+    color: #9d9d9d;
     font-weight: bold;
     border-radius: 20px;
     -moz-border-radius: 20px;
@@ -993,9 +994,15 @@ border: 0px solid #000000;
     margin: 10px;
     opacity: 0.8;
     padding: 0;
-border-radius: 0px 200px 200px 0px;
--moz-border-radius: 0px 200px 200px 0px;
--webkit-border-radius: 0px 200px 200px 0px;
+-webkit-border-radius: 200px;
+-webkit-border-top-left-radius: 10px;
+-webkit-border-bottom-left-radius: 10px;
+-moz-border-radius: 200px;
+-moz-border-radius-topleft: 10px;
+-moz-border-radius-bottomleft: 10px;
+border-radius: 200px;
+border-top-left-radius: 10px;
+border-bottom-left-radius: 10px;
 border: 0px solid #000000;
 }
 .jobdates {
@@ -1347,10 +1354,95 @@ and (min-width : 321px) and (max-width : 480px) {
     margin-top: 0 !important;
     width: 140px !important;
 }
+p.jobdates {
+    float: right !important;
+    margin-top: -120px !important;
 }
-
+}
+@media only screen
+and (min-width : 315px) and (max-width : 325px) {
+body {
+    width: 320px;
+    overflow-x: hidden;
+}
+p.jobdates {
+    width: 200px;
+}
+.jobinfo {
+    border-radius: 0 !important;
+    margin-left: -30px !important;
+    width: 320px !important;
+}
+.portfolio-listing {
+    width: 300px !important;
+    margin-left: -25px !important;
+}
+.project-info p {
+    line-height: 1.2em !important;
+}
+.navbar ul li .link {
+    color: #FFFFFF;
+    margin-left: 50px;
+    text-align: center;
+    line-height: 0em;
+}
+#introheading {
+    background: none repeat scroll 0 0 #FFFFFF;
+    font-size: 3em;
+    margin-left: -20px;
+    width: 300px !important;
+}
+.col_9.long {
+    background: none !important;
+}
+#aboutbox1 {
+    float: left;
+    margin-left: -55px !important;
+    margin-top: 155px !important;
+    width: 330px !important;
+}
+}
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) 
+and (orientation : landscape) { 
+body {
+    width: 480px;
+    overflow-x: hidden;
+}
+#aboutbox1 {
+    float: left;
+    margin-left: -55px !important;
+    padding-top: 160px;
+    width: 460px;
+}
+.jobinfo {
+    float: right !important;
+    border-radius: 0 !important;
+    margin-left: -30px !important;
+    width: 480px !important;
+}
+.portfolio-listing {
+    width: 460px !important;
+     margin-left: -25px !important;
+}
+.project-info p {
+    font-size: .9em !important;
+    line-height: 1.4em;
+}
+.navbar ul li .link {
+    color: #FFFFFF;
+    margin-left: 70px;
+    text-align: center;
+}
+.navbar ul li a {
+    line-height: 0;
+      padding: 20px 5px !important;
+}
+}
 @media only screen
 and (min-width : 400px) and (max-width : 480px) {
+
 .box #stephen {
     float: left;
     height: 130px !important;
@@ -1457,15 +1549,25 @@ and (min-width : 400px) and (max-width : 480px) {
 
 @media only screen
 and (max-width : 480px) {
-#aboutbox1 {
-    float: left;
-    margin-left: -15px !important;
-    margin-top: 155px !important;
-    width: 290px;
+.navbar {
+        position: fixed !important;
+        top: -54px !important;
+}
+.navbar ul li a {
+    color: #ffffff;
+}
+ul.resume li {
+font-size: .5em !important;
+}
+.navbar #logo {
+    top: 45px !important;
+}
+.slider {
+    display: none;
 }
 .portfolio-section {
-    width: 290px !important;
     margin-left: -20px;
+    padding-left: 40px;
 }
 .social img {
     width: 50px;
@@ -1478,6 +1580,13 @@ and (max-width : 480px) {
 #aboutbox1 h1 {
     font-size: 2.6em !important;
 }
+.labeltext {
+    font-size: .8em !important;
+    font-family: 'prime', sans-serif;
+}
+.project-info h2, .project-info h3 {
+     font-size: 1.1em !important;
+}
 #recent {
     margin-top: 0 !important;
 }
@@ -1489,7 +1598,11 @@ ul.resume li {
     padding: 10px !important;
 }
 p.jobdates {
-float: right !important;
+    float: left;
+    margin-left: 120px;
+    clear: both;
+    font-size: .9em;
+    margin-top: -120px !important;
 }
 .portfolio-listing {
     background-color: #E2E2E2;
@@ -1499,10 +1612,10 @@ float: right !important;
     -moz-border-radius-bottomleft: 8px;
     -webkit-border-bottom-left-radius: 8px;
     border-bottom-left-radius: 8px;
-    -moz-border-radius-topleft: 0px !important;
-    -webkit-border-top-left-radius: 0px !important;
-    -moz-border-radius-topright: 0px !important;
-    -webkit-border-top-right-radius: 0px !important;
+    -moz-border-radius-topleft: 8px;
+    -webkit-border-top-left-radius: 8px;
+    -moz-border-radius-topright: 8px;
+    -webkit-border-top-right-radius: 8px;
     clear: both;
     height: 305px;
     margin-top: 40px;
@@ -1559,9 +1672,13 @@ background: #E2E2E2;
 .flexslider {
    margin: 1050px 0 60px !important;
 }
+.companytitle {
+    line-height: 1em;
+}
 }
 
 /*****************  480 px - 765 px    **************/
+
 @media only screen
 and (min-width : 481px) {
     
@@ -1569,7 +1686,87 @@ and (min-width : 481px) {
     width: 100% !important;
 }
 }
-
+/*Grandma*/
+@media only screen
+and (min-width : 481px) and (max-width : 580px) {
+body {
+    width: 560px;
+    overflow-x: hidden;
+}
+.project-info p {
+   font-size: .8em !important;
+    line-height: 1.3em;
+}
+p.jobdates {
+    float: right !important;
+}
+.joblisting {
+    margin-left: 40px;
+    position: relative;
+    border-radius: 0 !important;
+}
+.portfolio-listing {
+    width: 540px !important;
+}
+.navbar {
+    position: fixed !important;
+    top: -54px !important;
+}
+.navbar ul li a {
+    color: #ffffff;
+}
+ul.resume li {
+font-size: .5em !important;
+}
+.navbar #logo {
+    top: 45px !important;
+}
+.slider {
+    display: none;
+}
+.portfolio-section {
+    margin-left: -20px;
+    padding-left: 70px;
+}
+.social img {
+    width: 50px;
+}
+.box #stephen {
+    float: left;
+    height: 244px !important;
+    margin-top: -80px !important;
+}
+#skills {
+    display: none;
+}
+#aboutbox1 h1 {
+    font-size: 2.6em !important;
+}
+.labeltext {
+    font-size: .8em !important;
+    font-family: 'prime', sans-serif;
+}
+.project-info h2, .project-info h3 {
+     font-size: 1.1em !important;
+}
+#recent {
+    margin-top: 0 !important;
+}
+ul.resume li {
+    line-height: 1em;
+    width: 410px;
+}
+.jobinfo {
+    padding: 10px !important;
+}
+p.jobdates {
+    float: left;
+    margin-left: 120px;
+    clear: both;
+    font-size: .9em;
+    margin-top: -120px !important;
+}
+}
 @media only screen
 and (min-width : 540px) and (max-width : 626px) {
     .navbar ul.mainnav li {
@@ -1649,8 +1846,10 @@ ul.mainnav {
 }
 
 @media only screen
-and (min-width : 600px) and (max-width : 700px) {
-    
+and (min-width : 626px) and (max-width : 626px) {
+.navbar ul li a {
+    color: #ffffff !important;
+}
 .navbar ul.mainnav li {
     margin-top: 0 !important;
     margin-bottom: 0 !important;
@@ -1699,6 +1898,13 @@ and (min-width : 700px) and (max-width : 768px) {
 }
 }
 
+@media only screen
+and (min-width : 700px) and (max-width : 830px) {
+    .navbar ul.mainnav li a {
+        margin-top: -10px;
+    }
+}
+
 @media only screen 
 and (min-width : 708px) {
 	#id_7 textarea {
@@ -1726,7 +1932,12 @@ and (max-width : 777px) {
 }
 
 /*****************  765 px - 900 px    **************/
-
+@media only screen
+and (min-width : 626px) and (max-width : 682px) {
+.navbar ul.portfolionav {
+    left: -100px !important;
+    }
+}
 @media only screen 
 and (min-width : 770px) {
     
@@ -1793,14 +2004,20 @@ and (min-width : 626px)and (max-width : 830px) {
 }
 }
 
+@media only screen 
+and (min-width : 830px)and (max-width : 1024px) {
+    
+    .navbar ul.mainnav li a {
+    margin-top: -10px !important;
+}
+}
+
 @media only screen
 and (max-width : 768px) {
     
     .col_3 {
         left: 0;
     }
-    .navbar ul.mainnav {
-}
 }
 
 @media only screen
@@ -1823,21 +2040,8 @@ and (min-width : 770px) and (max-width :  1024px) {
 }
 }
 
-@media only screen 
-and (max-width : 1024px) {
-    
-  .navbar ul li a {
-        color: #888;
-       font-size: .5em;
-       letter-spacing: .03em;
-       margin-bottom: 16px;
-       padding: 10px 5px;
-       text-align: left;
-        margin-left: 15px;       
-}
-}
-
 /*****************  900 px - 1024 px    **************/
+
 @media only screen
 and (min-width : 626px) and (max-width : 1024px) {
 
@@ -1845,9 +2049,6 @@ and (min-width : 626px) and (max-width : 1024px) {
     padding-left: 260px !important; 
 }
 }
-
-
-
 @media only screen 
 and (min-width : 830px)and (max-width : 880px) {
     
@@ -1877,13 +2078,6 @@ and (max-width : 950px) {
 }
 }
 
-@media only screen
-and (max-width : 1020px) {
-    .navbar ul.portfolionav li a {
-    line-height: .42em;
-}
-}
-
 @media only screen 
 and (max-width : 1000px) {
     
@@ -1895,13 +2089,8 @@ and (max-width : 1000px) {
 
 @media only screen 
 and (min-width : 830px) and (max-width : 1024px) {
-    .navbar {
-        right: none;
-        top: -50px;
-        border-radius: 0;
-	}
+
     .navbar ul {
-        display: inline;
         letter-spacing: 0.03em;
         line-height: 0.0em;
 }
@@ -1909,11 +2098,14 @@ and (min-width : 830px) and (max-width : 1024px) {
 
 @media only screen
 and (min-width : 950px) and (max-width : 1024px) {
-    .portfolionav .icon-lightbulb-menu:before {
+    
+.portfolionav .icon-lightbulb-menu:before {
     left: 748px !important;
     top: 3px;
 }
-
+.portfolionav {
+        top: 85px !important;
+}
 #introheading {
     font-size: 4em !important;
     margin-bottom: 10px;
@@ -1967,7 +2159,7 @@ and (max-width : 1024px) {
     color: #3a3a3a !important;
     background: none !important;
 }
-.portfolionav li a.selected2:hover {
+.portfolionav li a.selected2:hover, .portfolionav li a.selected3:hover {
     color: #E9BA00 !important;
     background: none !important;
 }
@@ -2009,7 +2201,6 @@ and (max-width : 1024px) {
 }
 .navbar ul li a {
     letter-spacing: 0.03em;
-    margin-bottom: 16px;
     margin-left: 15px;
     padding: 30px 5px !important;
     text-align: left;
@@ -2044,13 +2235,6 @@ and (max-width : 1024px) {
 }
 }
 
-@media only screen
-and (min-width : 950px) and (max-width : 1024px) { 
-    .portfolionav {
-        top: 85px !important;
-}
-}
-
 @media only screen 
 and (min-width : 100px) {
     
@@ -2063,7 +2247,7 @@ and (min-width : 100px) {
 and (max-width : 1022px) {
     
     .jobdates {
-    float: left !important;
+    float: left;
     margin-top: -110px !important;
     }
     .companyname {
@@ -2095,6 +2279,9 @@ and (min-width : 1025px) {
       margin-bottom: -10px;	
 	  padding-bottom: 10px;
 	  margin-left: -10px; 			
+}
+.proj-dreammedia.portfolio-listing img.portfoliophoto {
+    margin-top: -18px;
 }
 }
 
@@ -2168,12 +2355,43 @@ and (min-width : 1226px) {
          margin-bottom: 32px;
 }
 }
+@media only screen
+and (min-width : 321px) and (max-width : 379px) {
+.navbar ul li .link {
+    color: #FFFFFF;
+    margin-left: 10px !important;
+    text-align: center;
+}
+}
+
+@media only screen
+and (min-width : 380px) and (max-width : 429px) {
+.navbar ul li .link {
+    color: #FFFFFF;
+    margin-left: 30px !important;
+    text-align: center;
+}
+}
+
+@media only screen
+and (min-width : 430px) and (max-width : 474px) {
+.navbar ul li .link {
+    color: #FFFFFF;
+    margin-left: 50px !important;
+    text-align: center;
+}
+}
 
 @media only screen 
 and (min-width : 321px) and (max-width : 1236px) {
     
     .jobinfo {
-        width: 110% !important;
+        width: 100% !important;
+        border-radius: 0 !important;
+}
+.joblisting {
+    margin-left: -10px;
+    border-radius: 0 !important;
 }
 }
 
