--- a/style.css
+++ b/style.css
@@ -40,13 +40,6 @@
 .nudge2 {
     padding-top: 30px;
 }
-@mixin border-radius($radius) {
-  -webkit-border-radius: $radius;
-     -moz-border-radius: $radius;
-      -ms-border-radius: $radius;
-       -o-border-radius: $radius;
-          border-radius: $radius;
-}
 
 /*---------------------------------
 	IMPORTS
@@ -133,7 +126,7 @@ body{
 }
 .navbar ul li a {
     margin: 0;
-    padding: 10px 20px;
+    padding: 10px 20px !important;
     font-family: 'primelight';
 }
 .activenav {
@@ -151,6 +144,7 @@ body{
 .navbar {
 position:fixed;
 top:109px;
+ height: 264px;
 background:#fff !important;
 color:#fff;
 z-index:1000;
@@ -630,6 +624,9 @@ p.ptitle {
 }
 .resumelogo {
     box-shadow: none !important;
+}
+.wotiflogo.resumelogo {
+    border-radius: 0 !important;
 }
 .printdesc, .webdesc, .marketdesc {
     top: 180px;
@@ -1428,7 +1425,7 @@ body {
 }
 .navbar ul li a {
     line-height: 0;
-      padding: 20px 5px !important;
+      padding: 15px 30px !important;
 }
 }
 @media only screen
@@ -1717,8 +1714,8 @@ and (max-width : 626px) {
     display: none;
 }
 .navbar ul li a {
-    border-bottom: 1px solid #fff important;
-    border-top: 1px solid  #fff!important;
+    border-bottom: 1px solid #fff !important;
+    border-top: 1px solid  #fff !important;
 }
 .navbar ul li {
     width: 100% !important;
@@ -1906,8 +1903,8 @@ and (min-width : 626px)and (max-width : 830px) {
     font-size: 0.45em !important; 
     }
     .navbar ul li {
-    margin: none !important;
-    padding: none !important;
+    margin: 0 !important;
+    padding: 0 !important;
     }
     .last {
     display: none;
